plugins {
    id 'java'
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version '1.1.4'
}

group 'de.jmizv'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = '23'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "commons-cli:commons-cli:${commonsCliVersion}"

    implementation "com.google.code.gson:gson:${gsonVersion}"
    implementation "me.tongfei:progressbar:${progressbarVersion}"

    implementation "org.postgresql:postgresql:${postgresqlVersion}"
    implementation "org.mybatis:mybatis:${mybatisVersion}"

    implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
    // implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:${springBootVersion}'
    // implementation 'org.springframework.boot:spring-boot-starter-web:${springBootVersion}'
    implementation "org.springframework.boot:spring-boot-starter-json:${springBootVersion}"

    testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterApiVersion}"
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

test {
    useJUnitPlatform()
}